Fixed control alignment,pro checking, change label

--- a/Gutenberg/src/embedpress-pdf/style.scss
+++ b/Gutenberg/src/embedpress-pdf/style.scss
@@ -145,3 +145,13 @@ span.isPro {
     background-color: #b89d9d;
     border: 5px solid #b89d9d;
 }
+
+.embedpress-document-embed, .block-editor-block-list__block  {
+    display: inline-block;
+}
+.block-editor-block-inspector .components-base-control {
+    margin-top: 15px;
+}
+.pro-control-active {
+    margin-bottom: 24px;
+}
